Swagger documentation fix, all endpoints are working now
