# docs/swagger.json
@@ -28,13 +28,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "products"
                 ],
                 "summary": "Get products",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "search in name, description or category",
+                        "description": "search substring in name, description or category",
                         "name": "query",
                         "in": "query"
                     }
@@ -78,7 +78,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "products"
                 ],
                 "summary": "Add new product",
                 "parameters": [
@@ -88,7 +88,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.Product"
+                            "$ref": "#/definitions/entity.ProductData"
                         }
                     }
                 ],
@@ -130,7 +130,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "products"
                 ],
                 "summary": "Get product by ID",
                 "parameters": [
@@ -178,7 +178,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "products"
                 ],
                 "summary": "Edit product",
                 "parameters": [
@@ -195,15 +195,15 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.Product"
+                            "$ref": "#/definitions/entity.ProductData"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Product updated",
                         "schema": {
-                            "$ref": "#/definitions/entity.Product"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -235,7 +235,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "products"
                 ],
                 "summary": "Delete product",
                 "parameters": [
@@ -281,16 +281,38 @@
             "type": "object",
             "properties": {
                 "category_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 3
                 },
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Carbonated sweet drink"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "format": "int64",
+                    "example": 1
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Pepsi"
+                }
+            }
+        },
+        "entity.ProductData": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "integer",
+                    "example": 3
+                },
+                "description": {
+                    "type": "string",
+                    "example": "Carbonated sweet drink"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Pepsi"
                 }
             }
         },
@@ -298,20 +320,17 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 200
                 },
                 "message": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Product created"
                 }
             }
         }
     },
     "securityDefinitions": {
-        "ApiKeyAuth": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
-        },
         "BasicAuth": {
             "type": "basic"
         }
