# model/entity/product.go
@@ -1,14 +1,16 @@
 package entity
 
+// Product example
 type Product struct {
-	Id          int64  `json:"id,omitempty"`
-	Name        string `json:"name"`
-	Description string `json:"description"`
-	CategoryId  int64  `json:"category_id"`
+	Id          int64  `json:"id" example:"1" format:"int64"`
+	Name        string `json:"name" example:"Pepsi"`
+	Description string `json:"description" example:"Carbonated sweet drink"`
+	CategoryId  int64  `json:"category_id" example:"3"`
 }
 
-type AddProduct struct {
-	Name        string `json:"name"`
-	Description string `json:"description"`
-	CategoryId  int64  `json:"category_id"`
+// ProductData example
+type ProductData struct {
+	Name        string `json:"name" example:"Pepsi"`
+	Description string `json:"description" example:"Carbonated sweet drink"`
+	CategoryId  int64  `json:"category_id" example:"3"`
 }
